Update content with master branch

--- a/content/include/ppv2-apm-json-nvp-reference.adoc
+++ b/content/include/ppv2-apm-json-nvp-reference.adoc
@@ -1,10 +1,11 @@
 .Optional Fields in a {payment-method-name} Request
 
+tag::giropay-ppv2[]
 [cols="m,m,m"]
 |===
 | Field (NVP) | Field (JSON) | JSON Parent
 
-|bank_account_iban 
+|bank_account_iban  
 |iban 
 |bank-account ({ })
 
@@ -19,11 +20,13 @@
 |country 
 |address ({ })/ country 
 | account-holder ({ })
+end::giropay-ppv2[]
 
 |creditor_id 
 |creditor-id 
 |payment ({ })
 
+tag::giropay-ppv2[]
 |descriptor 
 |descriptor 
 |payment ({ })
@@ -43,6 +46,7 @@
 |last_name 
 |last-name 
 |account-holder ({ })
+end::giropay-ppv2[]
 
 |mandate_mandate_id 
 |mandate-id 
@@ -52,6 +56,7 @@
 |signed-date 
 |mandate ({ })
 
+tag::giropay-ppv2[]
 |merchant_account_id 
 |value 
 |merchant-account-id ({ })
@@ -156,6 +161,7 @@
 |transaction-type 
 |payment ({ })
 |===
+end::giropay-ppv2[]
 
 
 .Response-Only Fields for {payment-method-name}
