--- a/content/index/changelog/00-whats-new.adoc
+++ b/content/index/changelog/00-whats-new.adoc
@@ -1,24 +1,42 @@
 [#WhatsNew]
 == Changelog
 
+[#WhatsNew_2020_03]
+[discrete]
+=== 2020-03
+
+.2020-03-04
+- <<PPv2_giropay, giropay with {payment-page-v2-abbr}>> - Updated documentation for giropay with {payment-page-v2-abbr}.
+
+//-
+
 [#WhatsNew_2020_02]
 [discrete]
 === 2020-02
-.2020-02-27
-- <<GuaranteedInstallment, {payment-provider-name} Payment in Installments>> - New payment method available for REST API.
+
+.2020-02-07
+- <<GuaranteedInstallment, _{payment-provider-name} Payment in Installments_>> - New payment method available for REST API.
+
+//- 
 
 .2020-02-25
 - <<Feature_PurchaseReturnAuthorization, Update of Refund Transactions for Mastercard and Visa>> - New credit card refund transaction process for REST API.
 
+//-
 
 .2020-02-19
 - <<sslcertificate, SSL Certificates>> - Added SSL Certificates for REST API.
 
+//- 
+
 [#WhatsNew_2020_01]
 [discrete]
 === 2020-01
+
 .2020-01-31
 - <<doc.wirecard.com, doc.wirecard.com>> - Go live of new content structure for Wirecard Online Documentation.
+
+//-
 
 .2020-01-17
 - <<PaymentPageSolutions_PPv2_PaymentPageDesigner, Payment Page Designer>> - Updated documentation for {payment-page-v2}.
@@ -40,7 +58,6 @@
 === 2019-12
 
 .2019-12-12
-- <<PPv2_PaymentMethods, giropay with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
 - <<PPv2_PaymentMethods, Masterpass with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
 - <<PPv2_PaymentMethods, Skrill Digital Wallet with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
 - <<PPv2_PaymentMethods, Wirecard Voucher with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
@@ -293,7 +310,6 @@ documentation for {payment-page-v2}.
 .2019-01-21
 - <<PPSolutions_PPv2_PPv2Security, {payment-page-v2-abbr} Security>> - Updated documentation for {payment-page-v2}.
 - <<PPv2_Features, {payment-page-v2-abbr} Features>> - Updated documentation for {payment-page-v2}.
-- <<PPv2_paybox, paybox with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
 
 //-
 
