--- a/content/index/integration-options/ppv2/03-01-wirecard-payment-page.adoc
+++ b/content/index/integration-options/ppv2/03-01-wirecard-payment-page.adoc
@@ -99,6 +99,7 @@ endif::[]
 * <<PPv2_eps, eps with {payment-page-v2-abbr}>>
 
 ifndef::env-nova[]
+* <<PPv2_giropay, giropay with {payment-page-v2-abbr}>>
 * <<PPv2_GuaranteedInvoice, Guaranteed Invoice by {payment-provider-name} with {payment-page-v2-abbr}>>
 endif::[]
 
