--- a/content/index/payment-methods/11-00-payment-methods.adoc
+++ b/content/index/payment-methods/11-00-payment-methods.adoc
@@ -395,8 +395,7 @@ endif::[]
 
 ifndef::env-nova[]
 |[[PaymentMethods_PaymentMode_MobilePayment]]_Mobile Payment_
-|Some payment methods are to be used purely on the smartphone (Paybox),
-other payment methods offer _Mobile Payment_ as an additional variant to
+|Payment methods offer _Mobile Payment_ as an additional variant to
 their traditional payment possibilities. Therefore it is not possible to
 assign mobile payment to either _Credit/Debit Card_ or an APM.
 
@@ -409,9 +408,7 @@ options.
 credit card. Some consumers enjoy the comfort to pay with a mobile
 device and charge the monthly telecommunication bill.
 
-|<<API_paybox, paybox>>
-
-<<ApplePay, Apple Pay>>
+|<<ApplePay, Apple Pay>>
 endif::[]
 |===
 
