--- a/content/index.adoc
+++ b/content/index.adoc
@@ -166,7 +166,7 @@ include::index/payment-methods/fpx/ppv1/11-47-fpx.adoc[leveloffset=+2]
 
 include::index/payment-methods/giropay/giropay-main.adoc[leveloffset=+1]
 include::index/payment-methods/giropay/rest/11-10-giropay.adoc[leveloffset=+2]
-//include::index/payment-methods/giropay/ppv2/INFOBOX
+include::index/payment-methods/giropay/ppv2/03-01-04-17-giropay.adoc[leveloffset=+2]
 
 include::index/payment-methods/google-pay/google-pay-main.adoc[leveloffset=+1]
 include::index/payment-methods/google-pay/rest/11-39-google-pay.adoc[leveloffset=+2]
