--- a/content/index.adoc
+++ b/content/index.adoc
@@ -138,6 +138,9 @@ include::index/payment-methods/alipay-cross-border/ppv2/03-01-04-02-alipay-cross
 include::index/payment-methods/alipay-domestic/alipay-domestic-main.adoc[leveloffset=+1]
 include::index/payment-methods/alipay-domestic/rest/11-03-alipay-domestic.adoc[leveloffset=+2]
 
+include::index/payment-methods/alipay-qr-pay/alipay-qr-pay-main.adoc[leveloffset=+1]
+include::index/payment-methods/alipay-qr-pay/rest/11-49-alipay-qr-pay-rest.adoc[leveloffset=+2]
+
 include::index/payment-methods/apple-pay/apple-pay-main.adoc[leveloffset=+1]
 include::index/payment-methods/apple-pay/rest/11-04-apple-pay.adoc[leveloffset=+2]
 
