--- a/content/index/api-reference/16-07-appendix-k.adoc
+++ b/content/index/api-reference/16-07-appendix-k.adoc
@@ -30,6 +30,8 @@ ifdef::env-wirecard[]
 ifndef::env-nova[]
 * *Alipay Domestic:* see
 <<AlipayDomestic_TestCredentials, Alipay Domestic Test Credentials>>
+* *Alipay QR Pay:* see
+<<AlipayQRPay_TestCredentials, Alipay QR Pay Test Credentials>>
 * *Bancontact:* see
 <<Bancontact_TestCredentials, Bancontact Test Credentials>>
 * *Boleto:* see
