--- a/content/index/payment-methods/11-00-payment-methods.adoc
+++ b/content/index/payment-methods/11-00-payment-methods.adoc
@@ -374,6 +374,8 @@ endif::[]
 <<API_AlipayCrossBorder, Alipay Cross-border>>
 
 ifndef::env-nova[]
+<<AlipayQRPay_Main, Alipay QR Pay>>
+
 <<ApplePay, Apple Pay>>
 
 <<API_Masterpass, Masterpass>>
@@ -391,7 +393,7 @@ ifndef::env-nova[]
 <<VISACheckout, Visa Checkout>>
 endif::[]
 
-<<API_WeChatQRPay, WeChat QRPay>>
+<<API_WeChatQRPay, WeChat QR Pay>>
 
 ifndef::env-nova[]
 |[[PaymentMethods_PaymentMode_MobilePayment]]_Mobile Payment_
