--- a/content/index/imprint-and-privacy-policy/18-imprint.adoc
+++ b/content/index/imprint-and-privacy-policy/18-imprint.adoc
@@ -40,8 +40,8 @@ include::{root}/include/privacy-policy.adoc[]
 
 Copyright © {localyear} Wirecard AG All rights reserved.
 
-[.builddate]
-.Last Update
+[#builddate]
+.Last update
 {systemtimestamp}
 
 //-
