--- a/content/auto-generated/samples/CarrierBilling_Debit.adoc
+++ b/content/auto-generated/samples/CarrierBilling_Debit.adoc
@@ -138,3 +138,7 @@ e| Description | ``The resource was successfully created.``
 ----
 include::{root}/auto-generated/samples/xml/CarrierBilling_Debit_response.xml[]
 ----
+
+[#CarrierBilling_Debit_Samples_EOF]
+[discrete.hidden]
+=== EOF
