--- a/content/index/changelog/00-whats-new.adoc
+++ b/content/index/changelog/00-whats-new.adoc
@@ -8,6 +8,9 @@
 .2020-03-18
 - <<API_AlipayQRPay, Alipay QR Pay>> - New payment method available for REST API.
 
+.2020-03-06
+- <<Appendix_Xml, XML Schema Specification>> - Updated Payment XSD.
+
 .2020-03-04
 - <<PPv2_giropay, giropay with {payment-page-v2-abbr}>> - Updated documentation for giropay with {payment-page-v2-abbr}.
 
