--- a/content/index/payment-methods/credit-card/rest/11-01-credit-card.adoc
+++ b/content/index/payment-methods/credit-card/rest/11-01-credit-card.adoc
@@ -108,7 +108,7 @@ credentials:
 |===
 |Merchant Account ID (MAID) | 07edc10b-d3f9-4d12-901f-0db7f4c7e75c
 |Merchant Account Name |{merchant-account-name-cc-cardbrandreco}
-|Username to access Test Account | 70000-APIDEMO-CARD
+|Username to access Test Account | 70000-APILUHN-CARD
 |Password to access Test Account | 8mhwavKVb91T
 |Secret Key | 65f1d302-b2ac-4c52-8e31-5cc5351a258b
 |Mobile SDK Applicable | Yes
