Updated formatting/wording for consistency reasons

--- a/content/index/api-reference/13-00-status-codes-transaction-statuses.adoc
+++ b/content/index/api-reference/13-00-status-codes-transaction-statuses.adoc
@@ -31,9 +31,7 @@ https://cwiki.apache.org/confluence/display/HTTPD/CommonHTTPStatusCodes[here.]
 === Status Codes in Detail
 
 For the payment method _Credit Card_ we provide special card numbers for
-Amex, DINERS, DISCOVER, JCB, 
-MAESTRO, 
-Mastercard and VISA to test a variety of status codes.
+Amex, DINERS, DISCOVER, JCB, MAESTRO, Mastercard and VISA to test a variety of status codes.
 
 Those status codes you can test (mostly codes that begin with 500.1xxx),
 are marked bold and provide a link that points directly to the
@@ -57,7 +55,7 @@ associated with the testable status codes.
 | 100.1000 | information | Gateway settlement in progress. | Gateway settlement is in the middle of processing, please try again later.
 | 100.5555 | information | Test Transaction | Test Transaction.
 | 200.0000 | information | Request successful | The request completed successfully.
-| 200.1077 | information | Card/Cardholder eligible for 3-D authentication process. | Card is eligible for the ACS authentication process. If the consumer has not yet activated his card for 3-D Secure processing, his issuer may offer activation during shopping.
+| 200.1077 | information | Card/Cardholder eligible for 3D authentication process. | Card is eligible for the ACS authentication process. If the consumer has not yet activated his card for 3D Secure processing, his issuer may offer activation during shopping.
 | 200.1078 | information | Successful with 3D Full Authentication | The payment was successful, and the 3D Secure Authentication occurred.
 | 200.1079 | information | Successful with 3D Attempted Authentication | The payment was successful, and the 3D Secure Authentication was attempted, but not confirmed or denied.
 | 200.1080 | information | Successful with 3D Failed Authentication | The payment was successful, and the 3D Secure Authentication failed.
@@ -498,16 +496,16 @@ a| *500.1068*
 a| *500.1072*
 
 <<API_CC_TestCards_3D_Error, 3D>>, <<API_CC_TestCards_Non3D_Error, Non-3D>>
-| warning     | Card Not Enrolled | Card not enrolled: The card is not enrolled / the cardholder is not participating in the 3-D Secure program.
+| warning     | Card Not Enrolled | Card not enrolled: The card is not enrolled / the cardholder is not participating in the 3D Secure program.
 a| *500.1073*
 
 <<API_CC_TestCards_3D_Error, 3D>>
-| warning     | Unable to Verify Enrolment | Issuer unavailable: The card issuing system is not reachable. The 3-D secure process cannot be verified.
+| warning     | Unable to Verify Enrolment | Issuer unavailable: The card issuing system is not reachable. The 3D Secure process cannot be verified.
 a| *500.1074*
 
 <<API_CC_TestCards_3D_Error, 3D>>
-| warning     | MPI Error | System unavailable: The MPI system is not reachable. The 3-D secure process cannot be verified.
-| 500.1075 | information | Proof of authentication attempt was generated. | The payment reached the 3-D secure attempted status. The cardholder is not participating, but the attempt to authenticate was recorded. The transaction reached the liability shift and payment can be accepted.
+| warning     | MPI Error | System unavailable: The MPI system is not reachable. The 3D Secure process cannot be verified.
+| 500.1075 | information | Proof of authentication attempt was generated. | The payment reached the 3D Secure attempted status. The cardholder is not participating, but the attempt to authenticate was recorded. The transaction reached the liability shift and payment can be accepted.
 a| *500.1076*
 
 <<API_CC_TestCards_3D_Error, 3D>>
@@ -515,7 +513,7 @@ a| *500.1076*
 a| *500.1077*
 
 <<API_CC_TestCards_3D_Error, 3D>>
-| warning     | Authentication could not be completed due to technical or other problem | The 3-D systems are not reachable and authentication could not be performed. No liability shift is granted. Please try again later.
+| warning     | Authentication could not be completed due to technical or other problem | The 3D systems are not reachable and authentication could not be performed. No liability shift is granted. Please try again later.
 | 500.1080 | error       | 3Ds Authentication MasterCard Formatted Error | 3Ds Authentication MasterCard Formatted Error.
 | 500.1085 | error       | A system error prevented completion of authentication. | A system error prevented authentication from completing. The card can be accepted for payment but no authentication information will be passed to authorization processing and no liability shift will take place. Please try again later.
 | 500.1086 | error       | Missing Mandatory Field | The acquirer is missing a mandatory field.  Resend with all fields correctly entered. Please check your input or use different card.
