--- a/content/index/api-reference/16-01-appendix-b.adoc
+++ b/content/index/api-reference/16-01-appendix-b.adoc
@@ -1,8 +1,8 @@
 [#AppendixB]
 == Transaction Types
 
-* <<AppendixB_TransactionTypesforCreditCard, Credit Card>>
-* <<AppendixB_TransactionTypesforAlternativePaymentMethods, Alternative Payment Methods>>
+- <<AppendixB_TransactionTypesforCreditCard, Credit Card>>
+- <<AppendixB_TransactionTypesforAlternativePaymentMethods, Alternative Payment Methods>>
 
 //-
 
@@ -52,7 +52,7 @@ a card using card scheme directory server and/or ACS.
 cardholder authenticated the transaction within the 3D Secure Program.
 
 |check-risk |Check Risk |Checks the risk profile of the transaction
-information, without submitting a payment.
+information without submitting a payment.
 
 |check-signature |Check Signature |Validates digital signature for a
 [Payment Page] transaction.
