--- a/content/index/api-reference/16-06-appendix-i.adoc
+++ b/content/index/api-reference/16-06-appendix-i.adoc
@@ -7,7 +7,7 @@
 === REST API Integration
 
 [#AppendixI_FAQ_Error_NoProviderAccount]
-.We receive the following response when trying to process a transaction: +
+.I receive the following response when trying to process a transaction: +
 _<status code="400.1048" description="This Merchant Account does not have a Provider Account associated with it. Please contact technical support." severity="error"/>_ +
 
 You are passing a payment method, card type, or currency that is not
@@ -17,24 +17,24 @@ double-check your merchant account setup.
 '''''
 
 [#AppendixI_FAQ_Error_SameRequestId]
-.We keep receiving duplicate Request Id errors: +
+.I keep receiving duplicate Request Id errors: +
 _<status code="400.1018" description="The same Request Id for the Merchant Account is being tried a second time. Please use another Request Id." severity="error"/>_ +
 
-The <request-id> element must be unique for every transaction. If the
+The ``request-id`` must be unique for every transaction. If the
 problem persists, please contact technical support as it can also be an
 indication of a technical error.
 
 '''''
 
 [#AppendixI_FAQ_HtmlInsteadOfXmlResponse]
-.When submitting and/or querying transactions, I am getting this HTML response back, but would like it to be in XML format:
+.When submitting and/or querying transactions, I receive the following HTML response, but would like it to be in XML format instead:
 
 [source,html]
 ----
 include::{root}/samples/html/AppendixI_FAQ_HtmlInsteadOfXmlResponse_WsaqtIagtHrbbwlitbif.html[]
 ----
 
-Please ensure that the HTTP Content-Type Header to is set to "application/xml" in your request.
+Please ensure that the HTTP Content-Type header to is set to "application/xml" in your request.
 
 ``Content-Type: application/xml``
 
@@ -42,25 +42,24 @@ Please ensure that the HTTP Content-Type Header to is set to "application/xml" i
 
 [#AppendixI_FAQ_Credentials]
 .Where do I put my username and password when sending a transaction?
-Authentication is done via Basic HTTP authentication. See
-https://en.wikipedia.org/wiki/Basic_access_authentication#Protocol for
-more information.
+Authentication is done via Basic HTTP authentication. For more information, go to 
+https://en.wikipedia.org/wiki/Basic_access_authentication#Protocol.
 
 '''''
 
 [#AppendixI_FAQ_EmptyResponse]
-.My REST transaction query is producing an empty response.
-Please double-check the <merchant-account-id> you are using. In addition,
-you must supply a valid <request-id> that references a submitted
+.My REST transaction query produces an empty response.
+Please double-check the ``merchant-account-id`` you are using. In addition,
+you must supply a valid ``request-id`` that references a submitted
 transaction.
 
 '''''
 
 [#AppendixI_FAQ_SubmitRecurringAuthorizationRequest]
 .How can I submit a successful recurring authorization request?
-There are 2 ways to perform recurring transactions:
+There are two ways to perform recurring transactions:
 
-. By using the transaction type _referenced-authorization_ or _referenced-purchase_ for
+. By using the transaction type referenced-authorization or referenced-purchase for
 subsequent/recurring transactions.
 +
 .Request
