--- a/content/index/api-reference/16-07-appendix-k.adoc
+++ b/content/index/api-reference/16-07-appendix-k.adoc
@@ -7,7 +7,7 @@ for.
 
 .Credit Card
 
-* *Credit Card:* see
+- *Credit Card:* see
 <<CreditCard_TestCredentials, Credit Card Test Credentials>>
 
 [NOTE]
@@ -18,74 +18,74 @@ test 3D Secure and Non-3D Secure cards of different brands.
 
 .Alternative Payment Methods
 
-* *Alipay Cross-border:* see
+- *Alipay Cross-border:* see
 <<AlipayCrossBorder_TestCredentials, Alipay Cross-border Test Credentials>>
-* *Alipay Domestic:* see
+- *Alipay Domestic:* see
 <<AlipayDomestic_TestCredentials, Alipay Domestic Test Credentials>>
-* *Alipay QR Pay:* see
+- *Alipay QR Pay:* see
 <<AlipayQRPay_TestCredentials, Alipay QR Pay Test Credentials>>
-* *Bancontact:* see
+- *Bancontact:* see
 <<Bancontact_TestCredentials, Bancontact Test Credentials>>
-* *Boleto:* see
+- *Boleto:* see
 <<Boleto_TestCredentials, Boleto Test Credentials>>
-* *Carrier Billing:* see
+- *Carrier Billing:* see
 <<CarrierBilling_TestCredentials, Carrier Billing Test Credentials>>
-* *CIMB Clicks:* see
+- *CIMB Clicks:* see
 <<CIMBClicks_TestCredentials, CIMB Clicks Test Credentials>>
-* *eps-Überweisung:* see
+- *eps-Überweisung:* see
 <<eps_TestCredentials, eps-Überweisung Test Credentials>>
-* *giropay:* see
+- *giropay:* see
 <<giropay_TestCredentials, giropay Test Credentials>>
-* *Guaranteed Direct Debit:* see
+- *Guaranteed Direct Debit:* see
 <<GuaranteedDirectDebit_TestCredentials, Guaranteed Direct Debit Test Credentials>>
-* *Guaranteed Invoice by Wirecard:* see
+- *Guaranteed Invoice by Wirecard:* see
 <<GuaranteedInvoice_TestCredentials, Guaranteed Invoice by Wirecard Test Credentials>>
-* *iDEAL:* see
+- *iDEAL:* see
 <<iDEAL_TestCredentials, iDEAL Test Credentials>>
-* *Klarna Guaranteed Invoice and Installments:* see
+- *Klarna Guaranteed Invoice and Installments:* see
 <<Klarna_TestCredentials, Klarna Test Credentials>>
-* *Klarna Payments (Pay now, Pay later, Financing (Slice it)):* see
+- *Klarna Payments (Pay now, Pay later, Financing (Slice it)):* see
 <<KlarnaV2_TestCredentials, Klarna Pay now, Pay later, Financing (Slice it) Test Credentials>>
-* *Masterpass:* see
+- *Masterpass:* see
 <<API_Masterpass_TestCredentials, Masterpass Test Credentials>>
-* *Maybank2u:* see
+- *Maybank2u:* see
 <<Maybank2u_TestCredentials, Maybank2u Test Credentials>>
-* *MOLPay:* see
+- *MOLPay:* see
 <<MOLPay_TestCredentials, MOLPay Test Credentials>>
-* *Moneta.ru:* see
+- *Moneta.ru:* see
 <<monetaRu_TestCredentials, moneta.ru Test Credentials>>
-* *Pay by Bank app:* see
+- *Pay by Bank app:* see
 <<PaybyBankapp_TestCredentials, Pay by Bank app Test Credentials>>
-* *Paydirekt:* see
+- *Paydirekt:* see
 <<paydirekt_TestCredentials, paydirekt Test Credentials>>
-* *Payment On Invoice/Payment In Advance:* see
+- *Payment On Invoice/Payment In Advance:* see
 <<POIPIA_TestCredentials, Payment On Invoice/Payment In Advance Test Credentials>>
-* *payolution:* see
+- *payolution:* see
 <<payolution_TestCredentials, payolution Test Credentials>>
-* *PayPal:* see
+- *PayPal:* see
 <<PayPal_TestCredentials, PayPal Test Credentials>>
-* *Paysafecard:* see
+- *Paysafecard:* see
 <<paysafecard_TestCredentials, paysafecard Test Credentials>>
-* *POLi:* see
+- *POLi:* see
 <<POLi_TestCredentials, POLi Test Credentials>>
-* *Przelewy24 (P24):* see
+- *Przelewy24 (P24):* see
 <<Przelewy24_TestCredentials, P24 Test Credentials>>
-* *SEPA:* see
+- *SEPA:* see
 <<SEPADirectDebit_TestCredentials, SEPA Direct Debit Test Credentials>> and
 <<SEPACreditTransfer_TestCredentials, SEPA Credit Transfer Test Credentials>>
-* *Skrill Digital Wallet:* see
+- *Skrill Digital Wallet:* see
 <<SkrillDigitalWallet_TestCredentials, Skrill Digital Wallet Test Credentials>>
-* *Sofort.:* see
+- *Sofort.:* see
 <<Sofort_TestCredentials, Sofort. Test Credentials>>
-* *Trustly:* see
+- *Trustly:* see
 <<Trustly_TestCredentials, Trustly Test Credentials>>
-* *TrustPay:* see
+- *TrustPay:* see
 <<TrustPay_TestCredentials, TrustPay Test Credentials>>
-* *VISA Checkout:* see
+- *VISA Checkout:* see
 <<VISACheckout_TestCredentials, VISA Checkout Test Credentials>>
-* *WeChat QRPay:* see
+- *WeChat QRPay:* see
 <<WeChatQRPay_TestCredentials, WeChat QRPay Test Credentials>>
-* *Wirecard Voucher:* see
+- *Wirecard Voucher:* see
 <<WirecardVoucher_TestCredentials, Wirecard Voucher Test Credentials>>
 
 //-
