--- a/content/index/demo-shop/03-01-11-wpp-demo-shop.adoc
+++ b/content/index/demo-shop/03-01-11-wpp-demo-shop.adoc
@@ -17,9 +17,9 @@ solutions.
 All through a straightforward, minimalistic interface you can, among
 others,
 
-- edit the fields,
-- test various payment methods under different conditions,
-- switch between the different payment page types,
+- edit the fields.
+- test various payment methods under different conditions.
+- switch between the different payment page types.
 - customize the shopping cart items.
 
 //-
@@ -31,7 +31,7 @@ changes, with logs available as well.
 [#PPv2_{payment-provider-name}DemoShop_CustomMerchant]
 === The Custom Merchant
 
-The _Custom Merchant_ gives you the ability to use different merchant
+The _Custom Merchant_ allows you to use different merchant
 configurations when testing on _{payment-provider-name} Demo Shop_.
 
 To use it:
@@ -44,8 +44,7 @@ To use it:
 +
 image::images/03-01-11-wpp-demo-shop/WPP_DemoShop_MAID.png[Demo Shop Select MAID, height=250]
 +
-. The input field _Secret Key_ is being integrated between
-the fields _Merchant Account_ and _Request Amount_.
+. The input field _Secret Key_ is displayed below the _Merchant Account_ field.
 
 . Enter your custom *Merchant Account ID* and *Secret Key* in
 order to load the configured payment methods, currencies and transaction
@@ -66,9 +65,10 @@ image::images/03-01-11-wpp-demo-shop/WPP_DemoShop_SecretKey.png[Demo Shop Secret
 [#PPv2_{payment-provider-name}DemoShop_RawCodeView]
 === Raw Code View
 
-To see the demo shop fields as raw code:
+To see the _{payment-provider-name} Demo Shop_ fields as raw code:
 
-. Open the *Fields* screen.
+. Click *Fields* in the right bottom corner of the _{payment-provider-name} Demo Shop_ start page.
+
 . Enable the *Show Raw* view.
 +
 image::images/03-01-11-wpp-demo-shop/WPP_DemoShop_RawCode.jpg[Raw Code View, height=250]
@@ -77,11 +77,11 @@ image::images/03-01-11-wpp-demo-shop/WPP_DemoShop_RawCode_Code.jpg[Raw Code, hei
 
 //-
 
-On this screen, you can:
+On this screen, you can,
 
-- Beautify the code using the *Reformat* button.
-- Import a ``.json`` file to replace the code using the *Import* button.
-- Export the code as a ``.json`` file using the *Export* button.
+- beautify the code using the *Reformat* button.
+- import a ``.json`` file to replace the code using the *Import* button.
+- export the code as a ``.json`` file using the *Export* button.
 
 //-
 
