--- a/content/index/contact-us/17-contact-us.adoc
+++ b/content/index/contact-us/17-contact-us.adoc
@@ -14,14 +14,14 @@ Wirecard, do not hesitate to contact our sales teams.
 2+|*Wirecard AG* +
 Einsteinring 35 +
 85609 Aschheim, Germany
-.2+|*Sales team* +
+.2+|*Sales Team* +
 Phone: link:tel:+498944241400[+49 89 4424-1400] +
 sales@wirecard.com
-|*Support team* +
+|*Support Team* +
 Phone: link:tel:+498944241640[+49 89 4424-1640] +
 Emergency hotline (24/7): link:tel:+498944241649[+49 89 4424-1649] +
 support@wirecard.com +
-|[[ShopSystems_ContactUs]]*Shop Systems Support team* +
+|[[ShopSystems_ContactUs]]*Shop Systems Support Team* +
 shop-systems-support@wirecard.com +
 2+|We are glad to be of assistance from Monday to Friday from 8:00 to 19:00 (CET).
 |===
@@ -33,13 +33,13 @@ shop-systems-support@wirecard.com +
 2+|*Wirecard Australia A&I Pty Ltd* +
 Level 8, 360 Collins Street, +
 Melbourne Victoria 3000
-.2+|*Sales team* +
+.2+|*Sales Team* +
 Phone: link:tel:+611300599980[+61 1300 599 980] +
 sales.au@wirecard.com
-|*Support team* +
+|*Support Team* +
 Phone: link:tel:+611300599991[+61 1300 599 991] +
 au.support@wirecard.com
-|*Shop Systems Support team* +
+|*Shop Systems Support Team* +
 shop-systems-support@wirecard.com
 2+|We are glad to be of assistance from Monday to Friday from 9:00 to 17:00.
 (AET).
@@ -52,13 +52,13 @@ shop-systems-support@wirecard.com
 2+|*Wirecard CEE* +
 Reininghausstraße 13a +
 8020 Graz, Austria
-.2+|*Sales team* +
+.2+|*Sales Team* +
 Phone: link:tel:+433168136811400[+43 316 813681-1400] +
 office.at@wirecard.com
-|*Support team* +
+|*Support Team* +
 Phone: link:tel:+433168136811800[+43 316 813681-1800] +
 support.at@wirecard.com
-|*Shop Systems Support team* +
+|*Shop Systems Support Team* +
 shop-systems-support@wirecard.com
 2+|We are glad to be of assistance from Monday to Friday from 8:00 to 16:30 (CET).
 |===
@@ -70,13 +70,13 @@ shop-systems-support@wirecard.com
 2+|*Wirecard Singapore Pte Ltd* +
 80 Pasir Panjang Road, #14-81 Mapletree Business City II, +
 Singapore 117372
-.2+|*Sales team* +
+.2+|*Sales Team* +
 Phone: link:tel:+6566906690[+65 6690 6690] +
 sales-enquiry.sg@wirecard.com
-|*Support team* +
+|*Support Team* +
 Phone: link:tel:+6568076050[+65 6807 6050] +
 ap.support@wirecard.com
-|*Shop Systems Support team* +
+|*Shop Systems Support Team* +
 shop-systems-support@wirecard.com
 2+|We are glad to be of assistance from Monday to Friday from 9:00 to 18:00.
 (SGT).
