Update wording for consistency reasons

--- a/content/index/integration-guides/ppv1/03-02-01-02-00-pp-hosted-payment-page-integration.adoc
+++ b/content/index/integration-guides/ppv1/03-02-01-02-00-pp-hosted-payment-page-integration.adoc
@@ -4,7 +4,7 @@
 [#PP_HPP_Integration_PaymentMethodSelection]
 === Hosted Payment Page with Payment Method Selection
 
-Integration is as easy as including one JavaScript library into the merchant's checkout page:
+Integration is as easy as including a JavaScript library into the merchant's checkout page:
 
 [source,html,subs=attributes+]
 ----
