--- a/content/index/integration-guides/ppv1/03-02-02-02-00-pp-epp-integration.adoc
+++ b/content/index/integration-guides/ppv1/03-02-02-02-00-pp-epp-integration.adoc
@@ -1,7 +1,7 @@
 [#PP_EPP_Integration]
 == Embedded Payment Page image:images/icons/legacy.png[LEGACY, 80, 20, role="no-zoom", title="Development of this product is discontinued."]
 
-From a technical point of view, merchants just include one JavaScript library:
+From a technical point of view, merchants just include a JavaScript library:
 
 [source,html,subs=attributes+]
 ----
@@ -16,7 +16,7 @@ A function call of that library provides the payment functionality:
 ----
 
 
-Or call a different name library with same functionality:
+Or call a different name library with the same functionality:
 
 [source,js,subs=attributes+]
 ----
