--- a/content/index/integration-guides/ppv1/03-02-03-02-integration.adoc
+++ b/content/index/integration-guides/ppv1/03-02-03-02-integration.adoc
@@ -1,7 +1,7 @@
 [#Seamless_Integration]
 == Seamless Integration image:images/icons/legacy.png[LEGACY, 80, 20, role="no-zoom", title="Development of this product is discontinued."]
 
-Integration is done via JavaScript library which merchants include in
+Integration is done via a JavaScript library which merchants include in
 their checkout page:
 
 [source,html,subs=attributes+]
@@ -54,7 +54,7 @@ Submits the form. Parameters are
 
 <1> ``requestData``: additional request data (optional)
 <2> ``onSuccess``: callback on successful form submission
-<3> ``onError``: callback when an error occurred submitting the form
+<3> ``onError``: callback when an error occurred during form submission
 
 [#Seamless_Integration_Library_SubmitPaymentRequest]
 .Submit the payment request
@@ -70,8 +70,8 @@ Submits the form. Parameters are
 Submits the payment request. Parameters are
 
 <1> ``requestData``: request data object, same as for Hosted Payment Page and similar to REST API integration
-<2> ``onSuccess``: callback on successful payment request
-<3> ``onError``: callback if an error occurred submitting the payment request
+<2> ``onSuccess``: callback on successful payment request submission
+<3> ``onError``: callback if an error occurred during payment request submission
 
 NOTE: The only parameter of the functions in case of both success and error is ``response``.
 
