Delete //:env-nova: and //:env-wirecard:

--- a/content/index/api-reference/04-02-rest-api-fields.adoc
+++ b/content/index/api-reference/04-02-rest-api-fields.adoc
@@ -1,11 +1,7 @@
-//:env-nova:
-//:env-wirecard:
-
 [#RestApi_Fields]
 == Fields
 
-These fields are used with _{payment-gateway}_
-REST API. 
+These fields are used with _{payment-gateway}_ REST API. 
 They are mandatory (*M*) or optional (*O*) in a request. Fields that show only in the response are marked accordingly.
 
 Please refer to the <<Appendix_Xml, XSD>> for details about the field's value range.
